--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "escape-html": "^1.0.3",
     "etag": "^1.8.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.2",
     "express-validator": "^7.0.1",
     "fill-range": "^7.0.1",
     "finalhandler": "^1.2.0",
@@ -69,6 +70,7 @@
     "mongodb-connection-string-url": "^2.6.0",
     "mongoose": "^7.2.3",
     "ms": "^2.0.0",
+    "multer": "*",
     "negotiator": "^0.6.3",
     "nodemailer": "^6.9.3",
     "nodemon": "^2.0.22",
@@ -94,6 +96,8 @@
     "send": "^0.18.0",
     "serve-static": "^1.15.0",
     "setprototypeof": "^1.2.0",
+    "sharp": "^0.32.6",
+    "sharp-multer": "^0.3.0",
     "side-channel": "^1.0.4",
     "simple-update-notifier": "^1.1.0",
     "smart-buffer": "^4.2.0",
